--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,7 @@
 
 REACT_APP_API_URL=https://thisisbrazil-backend.onrender.com
 
+LINK_UTM = https://www.lojathisisbrazil.com.br/?utm_source=facebook&utm_medium=paid&utm_campaign=promo3dias
+
+
 
